src/objects/FieloCMS__TagItem__c.object
<CustomObject>
    <fields>
        <fullName>FieloCMS__Media__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media</label>
        <referenceTo>FieloCMS__Media__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>Tag_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Post__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post</label>
        <referenceTo>FieloCMS__Post__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>Tag_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>FieloCMS__Tag__c</referenceTo>
        <relationshipLabel>Tag Items</relationshipLabel>
        <relationshipName>Tag_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    
    <label>Tag Item</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Tag Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>